--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My React App</title>
+    <title></title>
 </head>
 <body>
-    <div id="root"></div>
+    <noscript>
+        You need to enable JavaScript to run this app.
+      </noscript>
+    <div id="app"></div>
 </body>
 </html>
